--- a/docs/style.css
+++ b/docs/style.css
@@ -3,9 +3,9 @@ html {
     font-family: 'Calibri', sans-serif;
     font-size: 15px;
     top: 0;
-    bottom: 0;
+    bottom: 8px;
     left: 0;
-    right: 0;
+    right: 8px;
     position: absolute;
 }
 
@@ -14,8 +14,6 @@ body {
     height: 100%;
     width: 100%;
     position: absolute;
-    padding-bottom: 8px;
-    padding-right: 8px;
 }
 
 p {
